--- a/KotlinExampleMyTrip/app/src/main/res/layout/activity_main.xml
+++ b/KotlinExampleMyTrip/app/src/main/res/layout/activity_main.xml
@@ -8,26 +8,31 @@
     tools:context=".MainActivity">
 
     <EditText
+        android:id="@+id/editDistance"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/distance" />
 
     <EditText
+        android:id="@+id/editPrice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/price" />
 
     <EditText
+        android:id="@+id/editAutonomy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/autonomy" />
 
     <TextView
+        android:id="@+id/textResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="R$ 0,00" />
 
     <Button
+        android:id="@+id/textCalculate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Calculate" />
