--- a/KotlinExampleMyTrip/app/src/main/res/layout/activity_main.xml
+++ b/KotlinExampleMyTrip/app/src/main/res/layout/activity_main.xml
@@ -32,9 +32,10 @@
         android:text="R$ 0,00" />
 
     <Button
-        android:id="@+id/textCalculate"
+        android:id="@+id/buttonCalculate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Calculate" />
+        android:text="Calculate"
+        android:onClick="teste"/>
 
 </LinearLayout>
