--- a/KotlinExampleMyTrip/app/src/main/res/layout/activity_main.xml
+++ b/KotlinExampleMyTrip/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,6 @@
         android:id="@+id/buttonCalculate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Calculate"
-        android:onClick="teste"/>
+        android:text="Calculate" />
 
 </LinearLayout>
