--- a/MyTrip/app/src/main/res/values/colors.xml
+++ b/MyTrip/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorLightGray">#f0f0f0</color>
     <color name="colorDarkGray">#d2d2d2</color>
     <color name="colorText">#606060</color>
+    <color name="red">#fd6a6a</color>
 </resources>
