--- a/MyTrip/app/src/main/res/layout/activity_main.xml
+++ b/MyTrip/app/src/main/res/layout/activity_main.xml
@@ -9,16 +9,11 @@
 
     <EditText
         android:id="@+id/editDistance"
+        style="@style/nCustomEditText"
         android:layout_width="match_parent"
         android:layout_height="58dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/round_et"
         android:gravity="center"
-        android:hint="@string/distance"
-        android:textColor="@color/colorText"
-        android:textColorHint="@color/colorDarkGray" />
+        android:hint="@string/distance" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -32,16 +27,11 @@
 
     <EditText
         android:id="@+id/editPrice"
+        style="@style/nCustomEditText"
         android:layout_width="match_parent"
         android:layout_height="58dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/round_et"
         android:gravity="center"
-        android:hint="@string/price"
-        android:textColor="@color/colorText"
-        android:textColorHint="@color/colorDarkGray" />
+        android:hint="@string/price" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -55,16 +45,11 @@
 
     <EditText
         android:id="@+id/editAutonomy"
+        style="@style/nCustomEditText"
         android:layout_width="match_parent"
         android:layout_height="58dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/round_et"
         android:gravity="center"
-        android:hint="@string/autonomy"
-        android:textColor="@color/colorText"
-        android:textColorHint="@color/colorDarkGray" />
+        android:hint="@string/autonomy" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -83,17 +68,17 @@
         android:gravity="center"
         android:text="@string/textTotal"
         android:textAllCaps="true"
-        android:textSize="10dp"/>
+        android:textSize="10dp" />
 
     <TextView
         android:id="@+id/textResult"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:gravity="center"
+        android:text="R$ 0,00"
         android:textAllCaps="true"
         android:textColor="@color/red"
-        android:textSize="35sp"
-        android:text="R$ 0,00" />
+        android:textSize="35sp" />
 
     <Button
         android:id="@+id/buttonCalculate"
