--- a/MyTrip/app/src/main/res/layout/activity_main.xml
+++ b/MyTrip/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,11 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="@color/colorPrimaryDark"/>
+
     <EditText
         android:id="@+id/editDistance"
         style="@style/nCustomEditText"
@@ -82,8 +87,14 @@
 
     <Button
         android:id="@+id/buttonCalculate"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Calculate" />
+        android:layout_margin="15dp"
+        android:background="@drawable/round_btn"
+        android:padding="20dp"
+        android:text="Calculate"
+        android:textAllCaps="true"
+        android:textColor="@color/colorLightGray"
+        android:textSize="20sp" />
 
 </LinearLayout>
